# OrkaVM

./: .gitignore  CMakeLists.txt  LICENSE  README.md
config/OrkaVM/: config.h.in
include/OrkaVM/: orka.h
src/: CMakeLists.txt  main.c  orka_env_init.c
